# Automation-of-YouTube-Videos

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
config/: default.toml
src/: __init__.py  batch.py  main.py  pipeline.py
src/analytics/: __init__.py  tracker.py
src/channels/: __init__.py  manager.py
src/images/: __init__.py  generator.py  thumbnail.py
src/llm/: __init__.py  ollama.py
src/media/: __init__.py  library.py
src/optimization/: __init__.py  ab_testing.py
src/research/: __init__.py  ideas.py  trending.py
src/scheduler/: __init__.py  scheduler.py
src/templates/: __init__.py  manager.py
src/transcribe/: __init__.py  whisper.py
src/tts/: __init__.py  piper.py
src/upload/: __init__.py  tiktok.py  youtube.py
src/utils/: __init__.py  config.py
src/video/: __init__.py  assembler.py  effects.py
tests/: __init__.py  conftest.py
tests/e2e/: test_pipeline.py
tests/unit/: test_ab_testing.py  test_channels.py  test_research.py  test_thumbnail.py  test_video_effects.py
