[project]
name = "local-youtube-automation"
version = "0.1.0"
description = "Fully local YouTube automation - no API keys required"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alberto" }]

dependencies = [
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pysrt>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# YouTube upload support (requires OAuth setup)
youtube = [
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.100.0",
]

# Local image generation with Stable Diffusion (requires NVIDIA GPU)
diffusers = [
    "torch>=2.0.0",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
]

# Whisper transcription for accurate subtitle timing
whisper = [
    "faster-whisper>=0.10.0",
]

# Alternative: OpenAI's whisper (heavier but more compatible)
whisper-openai = [
    "openai-whisper>=20231117",
]

# All optional features
all = [
    "local-youtube-automation[youtube,diffusers,whisper]",
]

[project.scripts]
ytauto = "src.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
